--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,30 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    flavorDimensions "api"
+
+    productFlavors {
+        free {
+            dimension "api"
+
+        }
+
+        paid {
+            dimension "api"
+        }
+    }
 }
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v4:26.1.0'
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.google.android.gms:play-services-ads:11.6.2'
+    freeImplementation 'com.google.android.gms:play-services-ads:11.6.2'
 
     implementation project(':jokeTeller')
     implementation project(':showjokes')
