--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,12 @@ android {
     productFlavors {
         free {
             dimension "api"
-
+            applicationId "com.udacity.gradle.builditbigger.free"
         }
 
         paid {
             dimension "api"
+            applicationId "com.udacity.gradle.builditbigger.paid"
         }
     }
 }
